updated formatting in localcontexts template in frontend

--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -51,7 +51,7 @@
                       <p class="pe-md-5 mb-4">
                           Maine-eDNA is committed to maintaining Indigenous provenance of and future interests in data
                           collected on Indigenous lands and waters. As part of our commitment to sharing and caring for
-                          data, Maine-eDNA is working with <a href="https://localcontexts.org/" target="_blank">Local Contexts</a>
+                          data, Maine-eDNA is working with <a href="https://localcontexts.org/" class="text-info" target="_blank">Local Contexts</a>
                           to openly collaborate with Wabanaki Tribal Nations through the use of Biocultural (BC) Notices
                           and Labels. Maine-eDNA and Local Contexts are collaborating with Wabanaki Tribal Nations to
                           develop BC Notices and Labels projects that also will be shared as models for the international community.<br><br>
@@ -76,9 +76,9 @@
                   <div class="col-md-8 col-12 my-auto">
                       <p class="pe-md-5 mb-4">
                           Local Contexts enables the communication
-                          of <a href="https://localcontexts.org/labels/traditional-knowledge-labels/" target="_blank">Traditional Knowledge (TK)</a>
-                          and <a href="https://localcontexts.org/labels/biocultural-labels/" target="_blank">Biocultural (BC)</a> Labels
-                          and <a href="https://localcontexts.org/notices/aboutnotices/" target="_blank">Notices</a> between Indigenous
+                          of <a href="https://localcontexts.org/labels/traditional-knowledge-labels/" class="text-info" target="_blank">Traditional Knowledge (TK)</a>
+                          and <a href="https://localcontexts.org/labels/biocultural-labels/" class="text-info" target="_blank">Biocultural (BC)</a> Labels
+                          and <a href="https://localcontexts.org/notices/aboutnotices/" class="text-info" target="_blank">Notices</a> between Indigenous
                           communities and researchers. These human and machine readable digital tags support relationships
                           between Indigenous communities, researchers, and institutions. They help communities, institutions and
                           researchers in the management of intellectual and cultural property, cultural heritage,
@@ -92,9 +92,9 @@
                           Tribal Nations. When partnering with Tribal Nations, Maine-eDNA promotes data sharing practices
                           that enable appropriate attribution, appropriate access and appropriate authority. As
                           researchers we are committed to the
-                          <a href="https://www.go-fair.org/fair-principles/" target="_blank">FAIR (Findable, Accessible, Interoperable, Reusable)</a>
+                          <a href="https://www.go-fair.org/fair-principles/" class="text-info" target="_blank">FAIR (Findable, Accessible, Interoperable, Reusable)</a>
                           guiding principles for managing scientific data and stewardship and
-                          <a href="https://www.gida-global.org/care" target="_blank">CARE (Collective Benefit,
+                          <a href="https://www.gida-global.org/care" class="text-info" target="_blank">CARE (Collective Benefit,
                           Authority to Control, Responsibility, Ethics)</a> guiding principles for Indigenous data governance.
                       </p>
                   </div>
@@ -117,9 +117,9 @@
                       <p class="pe-md-5 mb-4">
                           As part of the collaboration between Maine-eDNA and Local Contexts, Maine-eDNA has created a
                           long-term institutional account on the Local Contexts Hub under the
-                          <a href="https://umaine.edu/mcge/" target="_blank">Maine Center for Genetics in the Environment (MCGE)</a>.<br><br>
+                          <a href="https://umaine.edu/mcge/" class="text-info" target="_blank">Maine Center for Genetics in the Environment (MCGE)</a>.<br><br>
 
-                          The <a href="https://localcontexts.org/tk-label-hub/" target="_blank">Local Contexts Hub</a>
+                          The <a href="https://localcontexts.org/tk-label-hub/" class="text-info" target="_blank">Local Contexts Hub</a>
                           is a platform for communication and collaboration between communities,
                           institutions, and researchers. Using the Hub, researchers can submit Projects and attach Notices
                           to alert Indigenous communities of research activities, who can then customize and attach provenance,
@@ -143,9 +143,9 @@
                       <h3>Contact Information</h3>
                       <p class="pe-md-5 mb-4">
                           If you are interested in collaborating with Indigenous partners please contact Darren Ranco at
-                          <a href="mailto:darren.ranco@maine.edu">darren.ranco@maine.edu</a>.
+                          <a href="mailto:darren.ranco@maine.edu" class="text-info">darren.ranco@maine.edu</a>.
                           For more information about Local Contexts directly, please contact Local Contexts support at
-                          <a href="mailto:support@localcontexts.org">support@localcontexts.org"</a>.
+                          <a href="mailto:support@localcontexts.org" class="text-info">support@localcontexts.org"</a>.
                       </p>
                   </div>
               </div>
