updated MCGE logo url in local contexts template for frontend

--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -134,7 +134,7 @@
                   </div>
                   <div class="col-md-4 col-12 my-auto">
                       <a target="_blank" href="https://umaine.edu/mcge/">
-                          <img class="w-100 border-radius-lg shadow-lg p-2" src="https://storage.googleapis.com/anth-ja77-local-contexts-8985.appspot.com/users/institution-images/d19200a8-5b51-433c-9adb-2083c12a42de.png?Expires=1657308212&GoogleAccessId=localcontexts-django-storage%40anth-ja77-local-contexts-8985.iam.gserviceaccount.com&Signature=2Mf2XKcwX5QngJIQMC5RvZYlun08Yek%2BObmEe4jlcAfajdrqkF4Mw6MDupifr6GYMOXGMaSGUZUeIv%2Fp0yM4dxqAyg8LyynwqRtLdQjXgk84OnZa4StyS9%2Flr1%2FJ2217WRLZGrfLHHOJ%2BBF4auHYnuASaBd4dSbdxyj0grxuKf2p79Mypi5s0L6jOp3tq7zV0%2BZXh30jRr0lkvP4wc2rbJc6L0pN91o1dQAEQCrZLo%2BMtxXUfLrQV00PTzOAztyEqS1EWLpbkBdrzO%2FgYKZsVcORvi15GrhnTszYhGgGGHWHp28cCdPdZkDt8wzHZ2z3iLNbXAY8KPS3hO01yt2b7Q%3D%3D" alt="maine center for genetics in the environment logo">
+                          <img class="w-100 border-radius-lg shadow-lg p-2" src="https://storage.googleapis.com/anth-ja77-local-contexts-8985.appspot.com/users/institution-images/d19200a8-5b51-433c-9adb-2083c12a42de.png" alt="maine center for genetics in the environment logo">
                       </a>
                   </div>
               </div>
