removed extra text in local contexts template

--- a/frontend/templates/home/django-material-kit/localcontexts.html
+++ b/frontend/templates/home/django-material-kit/localcontexts.html
@@ -137,7 +137,7 @@
                           If you are interested in collaborating with Indigenous partners please contact Darren Ranco at
                           <a href="mailto:darren.ranco@maine.edu" class="text-info">darren.ranco@maine.edu</a>.
                           For more information about Local Contexts directly, please contact Local Contexts support at
-                          <a href="mailto:support@localcontexts.org" class="text-info">support@localcontexts.org"</a>.
+                          <a href="mailto:support@localcontexts.org" class="text-info">support@localcontexts.org</a>.
                       </p>
                   </div>
               </div>
