--- a/frontend/templates/home/django-material-kit/defined-terms.html
+++ b/frontend/templates/home/django-material-kit/defined-terms.html
@@ -13,10 +13,10 @@
   {% include 'includes/django-material-kit/navigation-transparent.html' %}
 
   <div class="page-header min-vh-80"
-       style="{% if sop_type == 'wet_lab' %}background-image: url('https://images.unsplash.com/photo-1615631570866-4ff59a69093a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')
-       {% elif sop_type == 'field_collection' %}background-image: url('https://images.unsplash.com/photo-1592870407191-67fa2b6c374e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')
-       {% elif sop_type == 'bioinformatics' %}background-image: url('https://images.unsplash.com/photo-1558494949-ef010cbdcc31?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')
-       {% else %}background-image: url('https://images.unsplash.com/photo-1546250001-6b7b60086f17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')
+       style="{% if defined_term_type == 'schema' %}background-image: url('https://images.unsplash.com/photo-1545987796-200677ee1011?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')
+       {% elif defined_term_type == 'permission' %}background-image: url('https://images.unsplash.com/photo-1584649525122-8d6895492a5d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')
+       {% elif defined_term_type == 'general' %}background-image: url('https://images.unsplash.com/photo-1583361704493-d4d4d1b1d70a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')
+       {% else %}background-image: url('https://images.unsplash.com/photo-1583361704493-d4d4d1b1d70a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')
        {% endif %}">
     <span class="mask bg-gradient-dark opacity-6"></span>
     <div class="container">
@@ -24,12 +24,12 @@
         <div class="col-md-8 mx-auto">
           <div class="text-center">
             <h1 class="text-white">
-              {% if sop_type == 'wet_lab' %} Wet Laboratory
-              {% elif sop_type == 'field_collection' %} Field Collection
-              {% elif sop_type == 'bioinformatics' %} Bioinformatics
+              {% if defined_term_type == 'schema' %} medna-metadata Schema (Entity Relationship Diagram)
+              {% elif defined_term_type == 'permission' %} Permissions
+              {% elif defined_term_type == 'general' %} General Definitions
               {% else %} {{ page_title|title }} {% endif %}
             </h1>
-            <p class="lead mb-4 text-white opacity-8">{% if sop_type %}Standard Operating Procedures{% else %}{{ page_subtitle }}{% endif %}</p>
+            <p class="lead mb-4 text-white opacity-8">{% if defined_term_type %}Defined Terms{% else %}{{ page_subtitle }}{% endif %}</p>
           </div>
         </div>
       </div>
@@ -40,34 +40,28 @@
       <div class="section text-start py-5">
         <!-- -------- START Grids -------- -->
           <div class="container">
-              {% if perms.utility.add_standardoperatingprocedure %}
+              {% if perms.utility.add_definedterm %}
               <div class="row">
-                  <a href="{% url 'add_standardoperatingprocedure' sop_type %}" class="d-flex align-items-center justify-content-end">
-                      <i class="fa fa-plus text-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Add New SOP"></i>
+                  <a href="{% url 'add_definedterm' defined_term_type %}" class="d-flex align-items-center justify-content-end">
+                      <i class="fa fa-plus text-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Add New Term"></i>
                   </a>
               </div>
               {% endif %}
               <!-- -------- START loop -------- -->
-              {% if sop_list %}
-              {% for sop in sop_list %}
+              {% if defined_term_list %}
+              {% for defined_term in defined_term_list %}
               <div class="row">
-                  <div class="col-md-12">
-                      <h5 class="font-weight-bolder mt-3">{{ sop.sop_title }}</h5>
-                  </div>
-                  <div class="col-md-8">
-                      <a href="{{ sop.sop_url }}">
-                          <h5 class="font-weight-bolder mt-3">URL</h5>
-                          <p class="pe-5">{{ sop.sop_url }}</p>
-                      </a>
-                  </div>
                   <div class="col-md-3">
-                      <h5 class="font-weight-bolder mt-3">Type</h5>
-                      <p class="pe-5">{{ sop.sop_type }}</p>
+                      <h5 class="font-weight-bolder mt-3">{{ defined_term.defined_term_name }}</h5>
                   </div>
-                  {% if perms.utility.change_standardoperatingprocedure %}
+                  <div class="col-md-8 bg-light text-dark">
+                      <h5 class="font-weight-bolder mt-3">{{ defined_term.defined_term_module }}: {{ defined_term.defined_term_model }}</h5>
+                      <p class="pe-5">{{ defined_term.defined_term }}</p>
+                  </div>
+                  {% if perms.utility.change_definedterm %}
                   <div class="col-md-1">
-                      <a href="{% url 'update_standardoperatingprocedure' sop.pk %}">
-                          <i class="fas fa-user-edit text-secondary text-sm mt-3" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit SOP"></i>
+                      <a href="{% url 'update_definedterm' sop.pk %}">
+                          <i class="fas fa-user-edit text-secondary text-sm mt-3" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Term"></i>
                       </a>
                   </div>
                   {% endif %}
@@ -77,7 +71,7 @@
               <hr/>
               {% endfor %}
               {% else %}
-              <p class="pe-5">No SOPs are available.</p>
+              <p class="pe-5">No defined terms are available.</p>
               {% endif %}
               <!-- -------- END loop -------- -->
           </div>
