--- a/frontend/templates/home/django-material-kit/defined-terms.html
+++ b/frontend/templates/home/django-material-kit/defined-terms.html
@@ -52,7 +52,7 @@
               {% for defined_term in defined_term_list %}
               <div class="row">
                   <div class="col-md-2">
-                      <h5 class="font-weight-bolder mt-3">{{ defined_term.defined_term_name }}</h5>
+                      <h5 class="font-weight-bolder mt-3">{{ defined_term.defined_term_name }} ({{ defined_term.uuid }})</h5>
                   </div>
                   <div class="col-md-9 bg-light text-dark">
                       {% if defined_term.defined_term_module %}<h5 class="font-weight-bolder mt-3">{{ defined_term.defined_term_module }} {{ defined_term.defined_term_model }}</h5>{% endif %}
