Fixed formatting in defined-term template in frontend module

--- a/frontend/templates/home/django-material-kit/defined-terms.html
+++ b/frontend/templates/home/django-material-kit/defined-terms.html
@@ -52,12 +52,13 @@
               {% for defined_term in defined_term_list %}
               <div class="row">
                   <div class="col-md-2">
-                      <h5 class="font-weight-bolder mt-3">{{ defined_term.defined_term_name }} ({{ defined_term.uuid }})</h5>
+                      <h5 class="font-weight-bolder mt-3">{{ defined_term.defined_term_name }}</h5>
+                      <h8 class="font-weight-bolder">UUID: {{ defined_term.uuid }}</h8>
                   </div>
                   <div class="col-md-9 bg-light text-dark">
-                      {% if defined_term.defined_term_module %}<h5 class="font-weight-bolder mt-3">{{ defined_term.defined_term_module }} {{ defined_term.defined_term_model }}</h5>{% endif %}
+                      {% if defined_term.defined_term_module %}<h5 class="font-weight-bolder mt-3">{{ defined_term.defined_term_module|title }} Module - {{ defined_term.defined_term_model|title }} Table</h5>{% endif %}
                       <p class="pe-5">{{ defined_term.defined_term }}</p>
-                      {% if defined_term.defined_term_example %}<p class="pe-5">{{ defined_term.defined_term_example }}</p> {% endif %}
+                      {% if defined_term.defined_term_example %}<p class="pe-5"><strong>Example:</strong> {{ defined_term.defined_term_example }}</p> {% endif %}
                   </div>
                   {% if perms.utility.change_definedterm %}
                   <div class="col-md-1">
