--- a/frontend/templates/home/django-material-kit/defined-terms.html
+++ b/frontend/templates/home/django-material-kit/defined-terms.html
@@ -39,6 +39,11 @@
     <div class="container">
       <div class="section text-start py-5">
         <!-- -------- START Grids -------- -->
+          {% if defined_term_type == 'schema' %}
+          <div class="row">
+              <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/medna-metadata-erd_v7.png' %}" alt="medna-metadata entity relationship diagram">
+          </div>
+          {% endif %}
           <div class="container">
               {% if perms.utility.add_definedterm %}
               <div class="row">
