--- a/frontend/templates/home/django-material-kit/defined-terms.html
+++ b/frontend/templates/home/django-material-kit/defined-terms.html
@@ -39,12 +39,14 @@
     <div class="container">
       <div class="section text-start py-5">
         <!-- -------- START Grids -------- -->
-          {% if defined_term_type == 'schema' %}
-          <div class="row">
-              <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/medna-metadata-erd_v7.png' %}" alt="medna-metadata entity relationship diagram">
-          </div>
-          {% endif %}
           <div class="container">
+              {% if defined_term_type == 'schema' %}
+              <div class="row">
+                  <img class="w-100 border-radius-lg" src="{% static 'assets/img/medna-metadata-erd_v7.png' %}" alt="medna-metadata entity relationship diagram">
+              </div>
+              <div class="w-100"></div>
+              <hr/>
+              {% endif %}
               {% if perms.utility.add_definedterm %}
               <div class="row">
                   <a href="{% url 'add_definedterm' defined_term_type %}" class="d-flex align-items-center justify-content-end">
