updated contact-us-timeline template to reflect addition of contact_type field

--- a/frontend/templates/includes/django-material-dashboard/contact-us-timeline.html
+++ b/frontend/templates/includes/django-material-dashboard/contact-us-timeline.html
@@ -9,7 +9,7 @@
                 &nbsp;<i class="{% if field.created_daypart == 1 %}fa fa-moon text-info text-gradient {% endif %}{% if field.created_daypart == 2 %}fa fa-sun-o text-secondary {% endif %}{% if field.created_daypart == 3 %}fa fa-sun text-warning text-gradient {% endif %}{% if field.created_daypart == 4 %}fa fa-moon-o text-secondary {% endif %}"></i>
             </span>
             <div class="timeline-content">
-                <h6 class="text-dark text-sm font-weight-bold mb-0">{{ field.created_datetime|date:"M d Y"}} @ {{ field.created_datetime|time:"h:iA"}}</h6>
+                <h6 class="text-dark text-sm font-weight-bold mb-0">{{ field.contact_type|upper }} {{ field.created_datetime|date:"M d Y"}} @ {{ field.created_datetime|time:"h:iA"}}</h6>
                 <p class="text-secondary font-weight-bold text-xs mt-1 mb-0"><span class="text-dark text-xs mt-1 mb-0">{{ field.contact_email }}</span>: {{ field.contact_context }}</p>
             </div>
         </div>
