--- a/frontend/templates/account/account_inactive.html
+++ b/frontend/templates/account/account_inactive.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "layouts/django-material-kit/base-fullscreen.html" %}
 {% load i18n static %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
@@ -7,14 +7,44 @@
 
 {% block title %}{% trans "Account Inactive" %} | {{ site_title|default:_('Maine-eDNA Metadata') }}{% endblock %}
 
-{% block bodyclass %}{{ block.super }} {% endblock %}
+{% block body_class %} sign-in-basic {% endblock %}
 
-{% block contentclass %}{{ block.super }}allauth_forms{% endblock %}
+<!-- Specific Page CSS goes HERE  -->
+{% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
-<div id="content-main">
-    <h1>{% trans "Account Inactive" %}</h1>
+  {% include 'includes/django-material-kit/navigation-transparent.html' %}
 
-    <p>{% trans "This account is inactive." %}</p>
-</div>
-{% endblock %}
+  <div class="page-header align-items-start min-vh-100" style="background-image: url('{% static 'assets/img/bg0-dark.jpg' %}');" loading="lazy">
+    <span class="mask bg-gradient-dark opacity-6"></span>
+    <div class="container my-auto">
+      <div class="row">
+        <div class="col-lg-4 col-md-8 col-12 mx-auto">
+          <div class="card z-index-0 fadeIn3 fadeInBottom">
+            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+              <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
+                <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
+                  Maine-eDNA Metadata
+                </h4>
+                <div class="row mt-3">
+                  <p class="mb-0 text-white text-center">
+                      {% trans "Account Inactive" %}
+                      {% trans "This account is inactive." %}
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="card-body">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    {% include 'includes/django-material-kit/footer-auth.html' %}
+
+  </div>
+{% endblock content %}
+
+<!-- Specific Page JS goes HERE  -->
+{% block javascripts %}{% endblock javascripts %}
