--- a/frontend/templates/account/account_inactive.html
+++ b/frontend/templates/account/account_inactive.html
@@ -24,17 +24,23 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
                 <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
-                  Maine-eDNA Metadata
+                  {% trans "Account Inactive" %}
                 </h4>
                 <div class="row mt-3">
                   <p class="mb-0 text-white text-center">
-                      {% trans "Account Inactive" %}
-                      {% trans "This account is inactive." %}
+                    {% if messages %}
+                      {% for message in messages %}
+                        {{ message | safe }}
+                      {% endfor %}
+                    {% endif %}
                   </p>
                 </div>
               </div>
             </div>
             <div class="card-body">
+              <p class="text-center">
+                {% trans "This account is inactive." %}
+              </p>
             </div>
           </div>
         </div>
