--- a/frontend/templates/account/email.html
+++ b/frontend/templates/account/email.html
@@ -38,7 +38,7 @@
           <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
             <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
               <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
-                {% trans "Maine-eDNA Metadata" %}
+                {% trans "E-mail Addresses" %}
               </h4>
               <div class="row mt-3">
                 <p class="mb-0 text-white text-center">
@@ -57,7 +57,6 @@
             </div>
           </div>
           <div class="card-body">
-            <h1>{% trans "E-mail Addresses" %}</h1>
             {% if user.emailaddress_set.all %}
             <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
               <form action="{% url 'account_email' %}" class="email_list" method="POST">
@@ -69,9 +68,9 @@
                       <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
                       {{ emailaddress.email }}
                       {% if emailaddress.verified %}
-                      <span class="verified">{% trans "Verified" %}</span>
+                      <span class="font-weight-bolder verified">{% trans "Verified" %}</span>
                       {% else %}
-                      <span class="unverified">{% trans "Unverified" %}</span>
+                      <span class="font-weight-bolder unverified">{% trans "Unverified" %}</span>
                       {% endif %}
                       {% if emailaddress.primary %}<span class="primary">{% trans "Primary" %}</span>{% endif %}
                     </label>
@@ -89,7 +88,7 @@
               <p><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
               {% endif %}
               {% if can_add_email %}
-              <h2>{% trans "Add E-mail Address" %}</h2>
+              <h6>{% trans "Add E-mail Address" %}</h6>
               <form method="POST" action="{% url 'account_email' %}" class="add_email">
                 {% csrf_token %}
                 {{ form.as_p }}
