Changed base template of email_reset template to django-material-kit

--- a/frontend/templates/account/password_reset.html
+++ b/frontend/templates/account/password_reset.html
@@ -1,6 +1,5 @@
-{% extends "account/base.html" %}
+{% extends "layouts/django-material-kit/base-fullscreen.html" %}
 {% load i18n static %}
-{% load crispy_forms_tags %}
 {% load account %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
@@ -14,33 +13,53 @@
 {% block contentclass %}{{ block.super }}allauth_forms{% endblock %}
 
 {% block content %}
-  <!-- begin errors -->
-  {% if form.errors and not form.non_field_errors %}
-    <p class="errornote">
-    {% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}
-    </p>
-  {% endif %}
-  {% if form.non_field_errors %}
-    {% for error in form.non_field_errors %}
-    <p class="errornote">
-      {{ error }}
-    </p>
-    {% endfor %}
-  {% endif %}
-  <!-- end errors -->
-
-  <div id="content-main">
-
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input class="btn btn-primary" type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+{% include 'includes/django-material-kit/navigation-transparent.html' %}
+<div class="page-header align-items-start min-vh-100" style="background-image: url('{% static 'assets/img/bg0-dark.jpg' %}');" loading="lazy">
+  <span class="mask bg-gradient-dark opacity-6"></span>
+  <div class="container my-auto">
+    <div class="row">
+      <div class="col-lg-4 col-md-8 col-12 mx-auto">
+        <div class="card z-index-0 fadeIn3 fadeInBottom">
+          <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+            <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
+              <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
+                {% trans "Password Reset" %}
+              </h4>
+              <div class="row mt-3">
+                <p class="mb-0 text-white text-center">
+                  <!-- begin errors -->
+                  {% if form.errors and not form.non_field_errors %}
+                  <p class="errornote">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
+                  {% endif %}
+                  {% if form.non_field_errors %}
+                  {% for error in form.non_field_errors %}
+                  <p class="errornote">{{ error }}</p>
+                  {% endfor %}
+                  {% endif %}
+                  <!-- end errors -->
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-body">
+            {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+            {% endif %}
+            <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+            <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input class="btn btn-primary" type="submit" value="{% trans 'Reset My Password' %}" />
+            </form>
+            <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+  {% include 'includes/django-material-kit/footer-auth.html' %}
+</div>
 {% endblock %}
+
+<!-- Specific Page JS goes HERE  -->
+{% block javascripts %}{% endblock javascripts %}
