added additional javascript block to password_change template

--- a/frontend/templates/account/password_change.html
+++ b/frontend/templates/account/password_change.html
@@ -55,3 +55,6 @@
   {% include 'includes/django-material-kit/footer-auth.html' %}
 </div>
 {% endblock %}
+
+<!-- Specific Page JS goes HERE  -->
+{% block javascripts %}{% endblock javascripts %}
