--- a/frontend/templates/account/password_reset_from_key.html
+++ b/frontend/templates/account/password_reset_from_key.html
@@ -1,6 +1,5 @@
-{% extends "account/base.html" %}
+{% extends "layouts/django-material-kit/base-fullscreen.html" %}
 {% load i18n static %}
-{% load crispy_forms_tags %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
 {{ form.media }}
@@ -13,38 +12,57 @@
 {% block contentclass %}{{ block.super }}allauth_forms{% endblock %}
 
 {% block content %}
-    <!-- begin errors -->
-    {% if form.errors and not form.non_field_errors %}
-        <p class="errornote">
-        {% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}
-        </p>
-    {% endif %}
-    {% if form.non_field_errors %}
-        {% for error in form.non_field_errors %}
-        <p class="errornote">
-          {{ error }}
-        </p>
-        {% endfor %}
-    {% endif %}
-    <!-- end errors -->
-
-  <div id="content-main">
-
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
-
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        {% if form %}
+{% include 'includes/django-material-kit/navigation-transparent.html' %}
+<div class="page-header align-items-start min-vh-100" style="background-image: url('{% static 'assets/img/bg0-dark.jpg' %}');" loading="lazy">
+  <span class="mask bg-gradient-dark opacity-6"></span>
+  <div class="container my-auto">
+    <div class="row">
+      <div class="col-lg-4 col-md-8 col-12 mx-auto">
+        <div class="card z-index-0 fadeIn3 fadeInBottom">
+          <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+            <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
+              <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
+                {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}
+              </h4>
+              <div class="row mt-3">
+                <p class="mb-0 text-white text-center">
+                  <!-- begin errors -->
+                  {% if form.errors and not form.non_field_errors %}
+                  <p class="errornote">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
+                  {% endif %}
+                  {% if form.non_field_errors %}
+                  {% for error in form.non_field_errors %}
+                  <p class="errornote">{{ error }}</p>
+                  {% endfor %}
+                  {% endif %}
+                  <!-- end errors -->
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-body">
+            {% if token_fail %}
+            {% url 'account_reset_password' as passwd_reset_url %}
+            <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+            {% else %}
+            {% if form %}
             <form method="POST" action="{{ action_url }}">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <input class="btn btn-primary" type="submit" name="action" value="{% trans 'change password' %}"/>
+              {% csrf_token %}
+              {{ form.as_p }}
+              <input class="btn btn-primary" type="submit" name="action" value="{% trans 'change password' %}"/>
             </form>
-        {% else %}
+            {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
-        {% endif %}
-    {% endif %}
+            {% endif %}
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% include 'includes/django-material-kit/footer-auth.html' %}
 </div>
 {% endblock %}
+
+<!-- Specific Page JS goes HERE  -->
+{% block javascripts %}{% endblock javascripts %}
