--- a/frontend/templates/account/login-main.html
+++ b/frontend/templates/account/login-main.html
@@ -2,7 +2,7 @@
 {% load i18n static %}
 {% load account socialaccount %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "utility/css/allauth_forms.css" %}">
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static 'utility/css/allauth_forms.css' %}">
 {{ form.media }}
 {% endblock %}
 
@@ -11,6 +11,9 @@
 {% block bodyclass %}{{ block.super }} {% endblock %}
 
 {% block contentclass %}{{ block.super }}allauth_forms{% endblock %}
+
+<!-- Specific Page CSS goes HERE  -->
+{% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
 {% include 'includes/django-material-kit/navigation-transparent.html' %}
@@ -27,6 +30,15 @@
               </h4>
               <div class="row mt-3">
                 <p class="mb-0 text-white text-center">
+                  <!-- begin messages -->
+                  <p>
+                    {% if messages %}
+                    {% for message in messages %}
+                    {{ message | safe }}
+                    {% endfor %}
+                    {% endif %}
+                  </p>
+                  <!-- end messages -->
                   <!-- begin errors -->
                   {% if form.errors and not form.non_field_errors %}
                   <p class="errornote">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
@@ -53,14 +65,16 @@
             {% else %}
             <p>{% blocktrans %}If you have not created an account yet, then please <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
             {% endif %}
-            <form class="login" method="POST" action="{% url 'account_login' %}">
+            <form class="login" method="POST" action="{% url 'account_login' %}" class="text-start">
               {% csrf_token %}
               {{ form.as_p }}
               {% if redirect_field_value %}
               <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
               {% endif %}
-              <a class="btn btn-secondary" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-              <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
+              <div class="text-center">
+                <button class="btn bg-gradient-primary my-4 mb-2" type="submit" name="login">{% trans "Sign In" %}</button>
+                <a class="btn btn-secondary" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+              </div>
             </form>
           </div>
         </div>
@@ -69,7 +83,7 @@
   </div>
   {% include 'includes/django-material-kit/footer-auth.html' %}
 </div>
-{% endblock %}
+{% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}{% endblock javascripts %}
