--- a/frontend/templates/account/login-dashboard.html
+++ b/frontend/templates/account/login-dashboard.html
@@ -28,32 +28,32 @@
               <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">
                 {% trans "Sign In" %}
               </h4>
-              <div class="row mt-3">
-                <p class="mb-0 text-white text-center">
-                  <!-- begin messages -->
-                  <p class="mb-0 text-white text-center">
-                    {% if messages %}
-                    {% for message in messages %}
-                    {{ message | safe }}
-                    {% endfor %}
-                    {% endif %}
-                  </p>
-                  <!-- end messages -->
-                  <!-- begin errors -->
-                  {% if form.errors and not form.non_field_errors %}
-                  <p class="mb-0 errornote">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
-                  {% endif %}
-                  {% if form.non_field_errors %}
-                  {% for error in form.non_field_errors %}
-                  <p class="mb-0 errornote">{{ error }}</p>
-                  {% endfor %}
-                  {% endif %}
-                  <!-- end errors -->
-                </p>
-              </div>
             </div>
           </div>
           <div class="card-body">
+            <div class="row mt-3">
+              <p class="mb-0 text-center">
+                <!-- begin messages -->
+                <p class="mb-0 text-center">
+                  {% if messages %}
+                  {% for message in messages %}
+                  {{ message | safe }}
+                  {% endfor %}
+                  {% endif %}
+                </p>
+                <!-- end messages -->
+                <!-- begin errors -->
+                {% if form.errors and not form.non_field_errors %}
+                <p class="mb-0 text-center">{% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}</p>
+                {% endif %}
+                {% if form.non_field_errors %}
+                {% for error in form.non_field_errors %}
+                <p class="mb-0 text-center">{{ error }}</p>
+                {% endfor %}
+                {% endif %}
+                <!-- end errors -->
+              </p>
+            </div>
             {% get_providers as socialaccount_providers %}
             {% if socialaccount_providers %}
             <p>{% blocktrans with site.name as site_name %}Please sign in with one of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a> for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
